--- a/Hulu.yaml
+++ b/Hulu.yaml
@@ -1,5 +1,5 @@
 payload:
-  # > Apple API
+  # > Hulu
   - DOMAIN-SUFFIX,cws-hulu.conviva.com
   - DOMAIN-SUFFIX,cws-hulu.conviva.com
   - DOMAIN-SUFFIX,hulu.com
