--- a/Douyin.yaml
+++ b/Douyin.yaml
@@ -1,19 +1,22 @@
 payload:
   # > Douyin
-  - v3-litea.douyinvod.com
-  - v5-lite.douyinvod.com
-  - v6-litea.douyinvod.com
-  - v9-litea.douyinvod.com
-  - v26-litea.douyinvod.com
-  - v95-sh-cold.douyinvod.com
-  - v95-p-cold.douyinvod.com
-  - v95-hn-cold.douyinvod.com
-  - v3-cold.douyinvod.com
-  - v9-cold2.douyinvod.com
-  - v1-cold.douyinvod.com
-  - v26-cold.douyinvod.com
-  - v27-cold.douyinvod.com
-  - douyinvod.com
-  - api-play.amemv.com
-  - v3-dy-o.zjcdn.com
-  - v5-coldn.douyinvod.com
+  - DOMAIN-SUFFIX,v3-litea.douyinvod.com
+  - DOMAIN-SUFFIX,v5-lite.douyinvod.com
+  - DOMAIN-SUFFIX,v6-litea.douyinvod.com
+  - DOMAIN-SUFFIX,v9-litea.douyinvod.com
+  - DOMAIN-SUFFIX,v26-litea.douyinvod.com
+  - DOMAIN-SUFFIX,v95-sh-cold.douyinvod.com
+  - DOMAIN-SUFFIX,v95-p-cold.douyinvod.com
+  - DOMAIN-SUFFIX,v95-hn-cold.douyinvod.com
+  - DOMAIN-SUFFIX,v3-cold.douyinvod.com
+  - DOMAIN-SUFFIX,v9-cold2.douyinvod.com
+  - DOMAIN-SUFFIX,v1-cold.douyinvod.com
+  - DOMAIN-SUFFIX,v26-cold.douyinvod.com
+  - DOMAIN-SUFFIX,v27-cold.douyinvod.com
+  - DOMAIN-SUFFIX,api-play.amemv.com
+  - DOMAIN-SUFFIX,v3-dy-o.zjcdn.com
+  - DOMAIN-SUFFIX,v5-coldn.douyinvod.com  
+  - DOMAIN-KEYWORD,douyinvod.com
+  - IP-CIDR,103.155.16.177,no-resolve
+  - IP-CIDR,107.155.25.122,no-resolve
+  - IP-CIDR,139.177.246.206,no-resolve
