--- a/Douyin.yaml
+++ b/Douyin.yaml
@@ -10,6 +10,7 @@ payload:
   - DOMAIN-SUFFIX,toutiao.com
   - DOMAIN-SUFFIX,douyinvod.com
   - DOMAIN-SUFFIX,bytegecko.com
+  - DOMAIN-SUFFIX,douyinstatic.com
   - IP-CIDR,103.155.16.177,no-resolve
   - IP-CIDR,107.155.25.122,no-resolve
   - IP-CIDR,139.177.246.206,no-resolve
