--- a/Douyin.yaml
+++ b/Douyin.yaml
@@ -9,6 +9,7 @@ payload:
   - DOMAIN-SUFFIX,douyinvod.com
   - DOMAIN-SUFFIX,douyinstatic.come
   - DOMAIN-SUFFIX,ecombdapi.com
+  - DOMAIN-SUFFIX,idouyinvod.com
   - DOMAIN-SUFFIX,ixigua.com
   - DOMAIN-SUFFIX,ixiguavideo.com
   - DOMAIN-SUFFIX,ksyun.com
