--- a/Douyin.yaml
+++ b/Douyin.yaml
@@ -7,7 +7,7 @@ payload:
   - DOMAIN-SUFFIX,bytegecko.com
   - DOMAIN-SUFFIX,ctobsnssdk.com
   - DOMAIN-SUFFIX,douyinvod.com
-  - DOMAIN-SUFFIX,douyinstatic.come
+  - DOMAIN-SUFFIX,douyinstatic.com
   - DOMAIN-SUFFIX,ecombdapi.com
   - DOMAIN-SUFFIX,idouyinvod.com
   - DOMAIN-SUFFIX,ixigua.com
