--- a/Douyin.yaml
+++ b/Douyin.yaml
@@ -13,6 +13,7 @@ payload:
   - DOMAIN-SUFFIX,ixigua.com
   - DOMAIN-SUFFIX,ixiguavideo.com
   - DOMAIN-SUFFIX,ksyun.com
+  - DOMAIN-SUFFIX,ks-live.com
   - DOMAIN-SUFFIX,pangolin-sdk-toutiao.com
   - DOMAIN-SUFFIX,pstatp.com
   - DOMAIN-SUFFIX,snssdk.com
