--- a/Douyin.yaml
+++ b/Douyin.yaml
@@ -14,6 +14,7 @@ payload:
   - DOMAIN-SUFFIX,ixiguavideo.com
   - DOMAIN-SUFFIX,ksyun.com
   - DOMAIN-SUFFIX,ks-live.com
+  - DOMAIN-SUFFIX,pglstatp-toutiao.com
   - DOMAIN-SUFFIX,pangolin-sdk-toutiao.com
   - DOMAIN-SUFFIX,pstatp.com
   - DOMAIN-SUFFIX,snssdk.com
