--- a/Netflix.yaml
+++ b/Netflix.yaml
@@ -52,6 +52,7 @@ payload:
   - IP-CIDR,198.45.48.0/20,no-resolve
   - IP-CIDR,207.45.72.0/22,no-resolve
   - IP-CIDR,208.75.76.0/22,no-resolve
+  - IP-CIDR6,2607:fb10::/32,no-resolve
   - IP-CIDR6,2620:10c:7000::/44,no-resolve
   - IP-CIDR6,2a00:86c0::/32,no-resolve
   - IP-CIDR6,2a03:5640::/32,no-resolve
