--- a/China Add.yaml
+++ b/China Add.yaml
@@ -4,4 +4,31 @@ payload:
   - DOMAIN-SUFFIX,mi-img.com
   - DOMAIN-SUFFIX,tuhu.org
   - DOMAIN-SUFFIX,tuhu.com
+  - DOMAIN-SUFFIX,amemv.com
+  - DOMAIN-SUFFIX,bdurl.net
+  - DOMAIN-SUFFIX,bytegecko.com
+  - DOMAIN-SUFFIX,bytegecko.com
+  - DOMAIN-SUFFIX,ctobsnssdk.com
+  - DOMAIN-SUFFIX,douyinvod.com
+  - DOMAIN-SUFFIX,douyinstatic.com
+  - DOMAIN-SUFFIX,ecombdapi.com
+  - DOMAIN-SUFFIX,idouyinvod.com
+  - DOMAIN-SUFFIX,ixigua.com
+  - DOMAIN-SUFFIX,ixiguavideo.com
+  - DOMAIN-SUFFIX,ksyun.com
+  - DOMAIN-SUFFIX,ks-live.com
+  - DOMAIN-SUFFIX,pglstatp-toutiao.com
+  - DOMAIN-SUFFIX,pangolin-sdk-toutiao.com
+  - DOMAIN-SUFFIX,pstatp.com
+  - DOMAIN-SUFFIX,snssdk.com
+  - DOMAIN-SUFFIX,toutiao.com
+  - DOMAIN-SUFFIX,volcsiriusbd.com
+  - DOMAIN-SUFFIX,zijieapi.com
+  - DOMAIN-SUFFIX,zjcdn.com
 
+  - IP-CIDR,103.155.16.176,no-resolve
+  - IP-CIDR,103.155.16.177,no-resolve
+  - IP-CIDR,107.155.25.121,no-resolve
+  - IP-CIDR,107.155.25.122,no-resolve
+  - IP-CIDR,138.113.151.178,no-resolve
+  - IP-CIDR,139.177.246.206,no-resolve
