--- a/Conversion.ini
+++ b/Conversion.ini
@@ -17,6 +17,7 @@ ruleset=📢 谷歌🇨🇳Play下载,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=📢 谷歌🇨🇳Play服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
+ruleset=🔔 油管节点,https://raw.githubusercontent.com/Yaochen2182/Clash/main/List/Youtube.list
 ruleset=🔔 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
@@ -29,11 +30,10 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=⚡ Speedtest,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Speedtest.yaml
-ruleset=🌈 奈飞解锁,https://raw.githubusercontent.com/Yaochen2182/Clash/main/Netflix(UNL).yaml
-ruleset=🌈 奈飞视频,https://raw.githubusercontent.com/Yaochen2182/Clash/main/NetflixIP.yaml
-ruleset=🌈 奈飞视频,https://raw.githubusercontent.com/Yaochen2182/Clash/main/Netflix(UNL).yaml
-ruleset=🎶 Spotify,https://raw.githubusercontent.com/dler-io/Rules/main/Clash/Provider/Media/Spotify.yaml
+ruleset=⚡ Speedtest,https://raw.githubusercontent.com/Yaochen2182/Clash/main/List/Speedtest.list
+ruleset=🌈 奈飞视频,https://raw.githubusercontent.com/Yaochen2182/Clash/main/List/Netflix.list
+ruleset=🌈 奈飞解锁,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🎶 Spotify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
 ruleset=🎶 网易音乐,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
@@ -44,7 +44,7 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yaochen2182/Clash/main/China%20Add.yaml
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/Yaochen2182/Clash/main/List/ChinaAdd.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
@@ -61,6 +61,7 @@ custom_proxy_group=📢 谷歌🇨🇳Play下载`select`[]🚀 节点选择`[]DI
 custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=📢 谷歌🇨🇳`select`[]DIRECT`[]🚀 节点选择`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 custom_proxy_group=📢 谷歌`select`[]🚀 节点选择`[]DIRECT`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
+custom_proxy_group=🔔 油管节点`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🔔 油管视频`select`[]🌍 国外媒体`[]🇸🇬 负载均衡`[]🇭🇰 负载均衡`[]🇯🇵 负载均衡`[]🇺🇸 负载均衡`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌈 奈飞解锁`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌈 奈飞视频`select`[]🌍 国外媒体`[]🇸🇬 负载均衡`[]🇭🇰 负载均衡`[]🇯🇵 负载均衡`[]🇺🇸 负载均衡`[]🚀 手动切换`[]DIRECT
