--- a/Conversion.ini
+++ b/Conversion.ini
@@ -22,7 +22,7 @@ ruleset=🔔 油管节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=💬 AISuite,https://raw.githubusercontent.com/Yaochen2182/Clash/refs/heads/main/List/AI%20Suite.list
+ruleset=💬 AISuite,https://raw.githubusercontent.com/Yaochen2182/Clash/refs/heads/main/List/AISuite.list
 ruleset=💬 AISuite,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/Yaochen2182/Clash/main/List/Xbox.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
